force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/IF_MDM_SFDC_INFO_PRODUCT__c.object-meta.xml
<CustomObject>
    <label>IF_MDM_SFDC_INFO_PRODUCT</label>
    <nameField>
        <displayFormat>No-{00000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>