force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/avg_wt__c.field-meta.xml
<CustomField>
    <fullName>avg_wt__c</fullName>
    <label>avg_wt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>