force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/bas_unit_cd__c.field-meta.xml
<CustomField>
    <fullName>bas_unit_cd__c</fullName>
    <label>bas_unit_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>