force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/box_ctcnt_qty__c.field-meta.xml
<CustomField>
    <fullName>box_ctcnt_qty__c</fullName>
    <label>box_ctcnt_qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>