force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/brd_nm__c.field-meta.xml
<CustomField>
    <fullName>brd_nm__c</fullName>
    <label>brd_nm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>