force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/caut_atc_strg_hdl_txt__c.field-meta.xml
<CustomField>
    <fullName>caut_atc_strg_hdl_txt__c</fullName>
    <label>caut_atc_strg_hdl_txt</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>