force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/chjd_itm_yn__c.field-meta.xml
<CustomField>
    <fullName>chjd_itm_yn__c</fullName>
    <label>chjd_itm_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>