force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/cj_gd_no__c.field-meta.xml
<CustomField>
    <fullName>cj_gd_no__c</fullName>
    <label>cj_gd_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>