force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/cj_mcd_srt_cd__c.field-meta.xml
<CustomField>
    <fullName>cj_mcd_srt_cd__c</fullName>
    <label>cj_mcd_srt_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>