force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/co_id__c.field-meta.xml
<CustomField>
    <fullName>co_id__c</fullName>
    <label>co_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>