force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/csmbl_yn__c.field-meta.xml
<CustomField>
    <fullName>csmbl_yn__c</fullName>
    <label>csmbl_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>