force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/dstr_his_no_rpt_obj_yn__c.field-meta.xml
<CustomField>
    <fullName>dstr_his_no_rpt_obj_yn__c</fullName>
    <label>dstr_his_no_rpt_obj_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>