force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/dstr_tlmt_dd_cnt__c.field-meta.xml
<CustomField>
    <fullName>dstr_tlmt_dd_cnt__c</fullName>
    <label>dstr_tlmt_dd_cnt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>