force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/ea_wt__c.field-meta.xml
<CustomField>
    <fullName>ea_wt__c</fullName>
    <label>ea_wt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>