force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/ekgrp_e__c.field-meta.xml
<CustomField>
    <fullName>ekgrp_e__c</fullName>
    <label>ekgrp_e</label>
    <length>255</length>
    <type>Text</type>
</CustomField>