force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/ekgrp_m__c.field-meta.xml
<CustomField>
    <fullName>ekgrp_m__c</fullName>
    <label>ekgrp_m</label>
    <length>255</length>
    <type>Text</type>
</CustomField>