force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/ekgrp_n__c.field-meta.xml
<CustomField>
    <fullName>ekgrp_n__c</fullName>
    <label>ekgrp_n</label>
    <length>255</length>
    <type>Text</type>
</CustomField>