force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/fd_cl_cd__c.field-meta.xml
<CustomField>
    <fullName>fd_cl_cd__c</fullName>
    <label>fd_cl_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>