force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/fw_gd_sml_id__c.field-meta.xml
<CustomField>
    <fullName>fw_gd_sml_id__c</fullName>
    <label>fw_gd_sml_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>