force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/fw_gdgrp_cd__c.field-meta.xml
<CustomField>
    <fullName>fw_gdgrp_cd__c</fullName>
    <label>fw_gdgrp_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>