force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/gd_bd__c.field-meta.xml
<CustomField>
    <fullName>gd_bd__c</fullName>
    <label>gd_bd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>