force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/gd_cl_div_cd__c.field-meta.xml
<CustomField>
    <fullName>gd_cl_div_cd__c</fullName>
    <label>gd_cl_div_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>