force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/gd_cls_id__c.field-meta.xml
<CustomField>
    <fullName>gd_cls_id__c</fullName>
    <label>gd_cls_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>