force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/gd_en_nm__c.field-meta.xml
<CustomField>
    <fullName>gd_en_nm__c</fullName>
    <label>gd_en_nm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>