force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/gd_md_grp_cd__c.field-meta.xml
<CustomField>
    <fullName>gd_md_grp_cd__c</fullName>
    <label>gd_md_grp_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>