force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/gd_stds_txt__c.field-meta.xml
<CustomField>
    <fullName>gd_stds_txt__c</fullName>
    <label>gd_stds_txt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>