force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/gd_tot_wt__c.field-meta.xml
<CustomField>
    <fullName>gd_tot_wt__c</fullName>
    <label>gd_tot_wt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>