force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/isliq__c.field-meta.xml
<CustomField>
    <fullName>isliq__c</fullName>
    <label>isliq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>