force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/lgl_dstr_tlmt_end_ymd__c.field-meta.xml
<CustomField>
    <fullName>lgl_dstr_tlmt_end_ymd__c</fullName>
    <label>lgl_dstr_tlmt_end_ymd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>