force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/lgl_nd_cmpo_bd__c.field-meta.xml
<CustomField>
    <fullName>lgl_nd_cmpo_bd__c</fullName>
    <label>lgl_nd_cmpo_bd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>