force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/lgs_ctr_id__c.field-meta.xml
<CustomField>
    <fullName>lgs_ctr_id__c</fullName>
    <label>lgs_ctr_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>