force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/liqkind__c.field-meta.xml
<CustomField>
    <fullName>liqkind__c</fullName>
    <label>liqkind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>