force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/liqusage__c.field-meta.xml
<CustomField>
    <fullName>liqusage__c</fullName>
    <label>liqusage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>