force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/lvstk_cd__c.field-meta.xml
<CustomField>
    <fullName>lvstk_cd__c</fullName>
    <label>lvstk_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>