force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/lvstk_part_nm__c.field-meta.xml
<CustomField>
    <fullName>lvstk_part_nm__c</fullName>
    <label>lvstk_part_nm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>