force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/main_act_txt__c.field-meta.xml
<CustomField>
    <fullName>main_act_txt__c</fullName>
    <label>main_act_txt</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>