force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/mcd_dtl_ql_txt__c.field-meta.xml
<CustomField>
    <fullName>mcd_dtl_ql_txt__c</fullName>
    <label>mcd_dtl_ql_txt</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>