force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/migr_orinat_cd__c.field-meta.xml
<CustomField>
    <fullName>migr_orinat_cd__c</fullName>
    <label>migr_orinat_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>