force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/mnf_ymd__c.field-meta.xml
<CustomField>
    <fullName>mnf_ymd__c</fullName>
    <label>mnf_ymd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>