force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/mnfco_orinat_cd__c.field-meta.xml
<CustomField>
    <fullName>mnfco_orinat_cd__c</fullName>
    <label>mnfco_orinat_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>