force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/nfxat_avg_wt__c.field-meta.xml
<CustomField>
    <fullName>nfxat_avg_wt__c</fullName>
    <label>nfxat_avg_wt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>