force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/nfxat_gd_yn__c.field-meta.xml
<CustomField>
    <fullName>nfxat_gd_yn__c</fullName>
    <label>nfxat_gd_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>