force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/odd_spcf_yn__c.field-meta.xml
<CustomField>
    <fullName>odd_spcf_yn__c</fullName>
    <label>odd_spcf_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>