force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/pice_sale_psb_yn__c.field-meta.xml
<CustomField>
    <fullName>pice_sale_psb_yn__c</fullName>
    <label>pice_sale_psb_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>