force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/pkgm_frm_cd__c.field-meta.xml
<CustomField>
    <fullName>pkgm_frm_cd__c</fullName>
    <label>pkgm_frm_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>