force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/plt_ld_unit_cd__c.field-meta.xml
<CustomField>
    <fullName>plt_ld_unit_cd__c</fullName>
    <label>plt_ld_unit_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>