force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/pv_chmadiv__c.field-meta.xml
<CustomField>
    <fullName>pv_chmadiv__c</fullName>
    <label>pv_chmadiv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>