force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/ql_grd_bd__c.field-meta.xml
<CustomField>
    <fullName>ql_grd_bd__c</fullName>
    <label>ql_grd_bd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>