force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/sale_rout_cd__c.field-meta.xml
<CustomField>
    <fullName>sale_rout_cd__c</fullName>
    <label>sale_rout_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>