force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/stk_mng_yn__c.field-meta.xml
<CustomField>
    <fullName>stk_mng_yn__c</fullName>
    <label>stk_mng_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>