force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/strg_cond_cd__c.field-meta.xml
<CustomField>
    <fullName>strg_cond_cd__c</fullName>
    <label>strg_cond_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>