force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/strgd_yn__c.field-meta.xml
<CustomField>
    <fullName>strgd_yn__c</fullName>
    <label>strgd_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>