force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/taxt_cl_cd__c.field-meta.xml
<CustomField>
    <fullName>taxt_cl_cd__c</fullName>
    <label>taxt_cl_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>