force-app/main/default/objects/IF_MDM_SFDC_INFO_PRODUCT__c/fields/updr_id__c.field-meta.xml
<CustomField>
    <fullName>updr_id__c</fullName>
    <label>updr_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>